Fix overflow

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -23,10 +23,6 @@ menu, ol, ul {
 
 button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
 
-.main {
-  overflow: hidden;
-}
-
 .bg {
   position: fixed;
   top: 0;
@@ -102,6 +98,7 @@ h5 {
   background-attachment: fixed;
   width: 100%;
   position: relative;
+  overflow: hidden;
   &:before, &:after {
     content: '';
     background: inherit;
